[package]
name = "xrewriter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
once_cell = "1.18.0"
serenity = { version = "0.11.7", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
regex = "1.10.2"
